--- a/index.html
+++ b/index.html
@@ -7,53 +7,93 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div id="nav-bar">
-        <div id="nav-header">
-            <h1>Dashboard</h1>
-        </div>
-        <div class="nav-item">
-            <h3>Home</h3>
-        </div>
-        <div class="nav-item">
-            <h3>Profile</h3>
-        </div>
-        <div class="nav-item">
-            <h3>Messages</h3>
-        </div>
-        <div class="nav-item">
-            <h3>History</h3>
-        </div>
-        <div class="nav-item">
-            <h3>Tasks</h3>
-        </div>
-        <div class="nav-item">
-            <h3>Communities</h3>
-        </div>
-        <div class="nav-item">
-            <h3>Settings</h3>
-        </div>
-        <div class="nav-item">
-            <h3>Support</h3>
-        </div>
-        <div class="nav-item">
-            <h3>Privacy</h3>
-        </div>
-    </div>
+
+    <!-- Header Section -->
     <div id="header">
         <div id="header-top">
-            <input type="text" id="search-bar" placeholder="Search">
-            <div id="notification-icon">icon</div>
-            <div class="profile-picture">icon</div>
-            <h2>Morgan Oakley</h2>
+            <div id="search-section">
+                <img src="./images/search-icon.png" alt="" width="50px">
+                <input type="text" id="search-bar" placeholder="Search">
+            </div>
+            <div id="user-info-section">
+                <div id="notification-icon">
+                    <img src="./images/notification-icon.png" alt="">
+                </div>
+                <div id="profile-picture">
+                    <img src="./images/profile-picture.png" alt="">
+                </div>
+                <h2>Morgan Oakley</h2>
+            </div>
+            
         </div>
         <div id="header-bottom">
-            <div class="profile-picture"></div>
             <div id="user-greeting">
-                <p>Hi There,</p>
-                <h1>Morgan Oakley (@morgan)</h1>
+                <img src="./images/profile-picture.png" width="50px" alt="">
+                <div>
+                    <p>Hi There,</p>
+                    <h1>Morgan Oakley (@morgan)</h1>
+                </div>
+            </div>
+            <div id="user-upload">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
             </div>
         </div>
     </div>
+    <!-- Nav Bar Section -->
+    <div id="nav-bar">
+        <div id="nav-header">
+            <img src="./images/dashboard-logo.png" alt="">
+            <h1>Dashboard</h1>
+        </div>
+        <div id="nav-links">
+            <ul>
+                <li>
+                    <img src="./images/home-icon.png" alt="">
+                    <p>Home</p>
+                </li>
+                <li>
+                    <img src="./images/profile-icon.png" alt="">
+                    <p>Profile</p>
+                </li>
+                <li>
+                    <img src="./images/message-icon.png" alt="">
+                    <p>Messages</p>
+                </li>
+                <li>
+                    <img src="./images/history-icon.png" alt="">
+                    <p>History</p>
+                </li>
+                <li>
+                    <img src="./images/task-icon.png" alt="">
+                    <p>Tasks</p>
+                </li>
+                <li>
+                    <img src="./images/community-icon.png" alt="">
+                    <p>Communities</p>
+                </li>
+            </ul>
+        </div>
+        <div id="secondary-nav-links">
+            <ul>
+                <li>
+                    <img src="./images/setting-icon.png" alt="">
+                    <p>Settings</p>
+                </li>
+                <li>
+                    <img src="./images/support-icon.png" alt="">
+                    <p>Support</p>
+                </li>
+                <li>
+                    <img src="./images/privacy-icon.png" alt="">
+                    <p>Privacy</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Main Content Section -->
     <div id="content">
         <div id="project-one" class="project-card"></div>
         <div id="project-two" class="project-card"></div>
