--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="header-top">
             <div id="search-section">
                 <img src="./images/search-icon.png" alt="" width="50px">
-                <input type="text" id="search-bar" placeholder="Search">
+                <input type="text" id="search-bar">
             </div>
             <div id="user-info-section">
                 <div id="notification-icon">
