--- a/index.html
+++ b/index.html
@@ -95,15 +95,100 @@
 
     <!-- Main Content Section -->
     <div id="content">
-        <div id="project-one" class="project-card"></div>
-        <div id="project-two" class="project-card"></div>
-        <div id="project-three" class="project-card"></div>
-        <div id="project-four" class="project-card"></div>
-        <div id="project-five" class="project-card"></div>
-        <div id="project-six" class="project-card"></div>
-
-        <div id="announcement-card"></div>
-        <div id="trending-card"></div>
+        <div class="project-card">
+            <div class="project-card-header">
+                <h5>Super Cool Project</h5>
+            </div>
+            <div class="project-card-content">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus ex eum similique laboriosam, quis sequi explicabo fugiat sint maxime non consequuntur numquam voluptates magni illo quod corporis ipsum aut est!</p>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="project-card-header">
+                <h5>Less Cool Project</h5>
+            </div>
+            <div class="project-card-content">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus ex eum similique laboriosam, quis sequi explicabo fugiat sint!</p>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="project-card-header">
+                <h5>Impossible App</h5>
+            </div>
+            <div class="project-card-content">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="project-card-header">
+                <h5>Easy Peasy App</h5>
+            </div>
+            <div class="project-card-content">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus ex eum similique laboriosam, quis sequi explicabo fugiat sint maxime non consequuntur numquam voluptates magni illo quod corporis ipsum aut est!</p>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="project-card-header">
+                <h5>Ad Blocker</h5>
+            </div>
+            <div class="project-card-content">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus ex eum similique laboriosam, quis sequi explicabo fugiat sint maxime non consequuntur numquam voluptates magni illo quod corporis ipsum aut est!</p>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="project-card-header">
+                <h5>Money Maker</h5>
+            </div>
+            <div class="project-card-content">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus ex eum similique laboriosam, quis sequi explicabo fugiat sint maxime non consequuntur numquam voluptates magni illo quod corporis ipsum aut est!</p>
+            </div>
+        </div>
+        <div class="announcements-and-trending">
+            <div id="announcement-card">
+                <div>
+                    <h5>Site Maintenance</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div>
+                    <h5>Community Share Day</h5>
+                    <p>Ratione pariatur rem quas cupiditate commodi et est obcaecati.</p>
+                </div>
+                <div>
+                    <h5>Updated Privacy Policy</h5>
+                    <p>Tenetur eveniet nihil reprehenderit totam ullam sunt.</p>
+                </div>
+            </div>
+            <div id="trending-card">
+                <div>
+                    <img src="./images/user1.png" alt="">
+                    <div>
+                        <h5>@tegan</h5>
+                        <p>World Peace Builder</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="./images/user2.png" alt="">
+                    <div>
+                        <h5>@morgan</h5>
+                        <p>Super Cool Project</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="./images/user3.png" alt="">
+                    <div>
+                        <h5>@kendall</h5>
+                        <p>Life Changing App</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="./images/user4.png" alt="">
+                    <div>
+                        <h5>@alex</h5>
+                        <p>No Traffic Maker</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
